--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
          </h1>
         </div>
 
-  <!-- Right Counts -->
+    <!-- Right Counts -->
         <div class="flex flex-wrap sm:flex-nowrap gap-2 sm:gap-4 mt-2 sm:mt-0 w-full sm:w-auto justify-center">
             <span id="heartCount" class="bg-[#41ff6b1a] min-w-[90px] px-3 py-1 text-center rounded-3xl text-sm sm:text-base">
               0 ❤️
@@ -52,12 +52,6 @@
             </span>
         </div>
     </nav>
-
-    <!-- <div class="text-center items-center">
-        <img src="./assets/logo.png" alt="">
-        <h1>Emergency Service Directory</h1>
-        <p>Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
-    </div> -->
     <!-- banner -->
      <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] text-white text-center py-10">
             <img src="./assets/logo.png" class="mx-auto w-16 h-16 text-white" alt="">
@@ -73,128 +67,128 @@
         <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center">
                  <img src="./assets/emergency.png" class="bg-[#DFEFFF] w-[60px] h-[60px] p-4 rounded-xl" alt="">
-                <button class="heartBtn"><i class="fa-regular fa-heart"></i></button>
+                <button class="heartBtn"><i class="fa-regular fa-heart  hover:text-red-500 hover:scale-110 transition duration-200 cursor-pointer"></i></button>
             </div >
             <span class="font-bold">National Emergency Number</span>
             <p class="text-xs  text-gray-500">National Emergency</p>
             <p class="text-lg font-bold mt-2">999</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">All</span>
             <div class="flex justify-between gap-2 mt-3 w-full">
-                <button class="copyBtn flex-1 px-4 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center" data-number="999"><i class="fa-solid fa-copy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-4 py-1 rounded-lg flex items-center justify-center" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
+                <button class="copyBtn flex-1 px-4 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-4 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
             </div>
         </div>
         <!-- 2nd  -->
         <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center">
                  <img src="./assets/police.png" class="bg-[#DFEFFF] w-[60px] h-[60px] p-4 rounded-xl" alt="">
-                <button class="heartBtn"><i class="fa-regular fa-heart"></i></button>
+                <button class="heartBtn"><i class="fa-regular fa-heart  hover:text-red-500 hover:scale-110 transition duration-200 cursor-pointer"></i></button>
             </div >
             <span class="font-bold">Police Helpline Number</span>
             <p class="text-xs  text-gray-500">Police</p>
             <p class="text-lg font-bold mt-2">999</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Police</span>
             <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center " data-number="999"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center" data-service="Police" data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
+                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Police" data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center">
                  <img src="./assets/fire-service.png" class="bg-[#DFEFFF] w-[60px] h-[60px] p-4 rounded-xl" alt="">
-                <button class="heartBtn"><i class="fa-regular fa-heart"></i></button>
+                <button class="heartBtn"><i class="fa-regular fa-heart  hover:text-red-500 hover:scale-110 transition duration-200 cursor-pointer"></i></button>
             </div >
             <span class="font-bold">Fire Service Number</span>
             <p class="text-xs  text-gray-500">Fire Service</p>
             <p class="text-lg font-bold mt-2">999</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Fire</span>
             <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center " data-number="999"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center" data-service="Fire Service Number" data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
+                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="999"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Fire Service Number" data-number="999"><i class="fa-solid fa-phone"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center">
                  <img src="./assets/ambulance.png" class="bg-[#DFEFFF] w-[60px] h-[60px] p-4 rounded-xl" alt="">
-                <button class="heartBtn"><i class="fa-regular fa-heart"></i></button>
+                <button class="heartBtn"><i class="fa-regular fa-heart  hover:text-red-500 hover:scale-110 transition duration-200 cursor-pointer"></i></button>
             </div >
             <span class="font-bold">Ambulance Service</span>
             <p class="text-xs  text-gray-500">Ambulance</p>
             <p class="text-lg font-bold mt-2">1994-999999</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Health</span>
             <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center " data-number="1994-999999"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center" data-service="Ambulance Service" data-number="1994-999999"><i class="fa-solid fa-phone"></i> Call</button>
+                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="1994-999999"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Ambulance Service" data-number="1994-999999"><i class="fa-solid fa-phone"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center">
                  <img src="./assets/emergency.png" class="bg-[#DFEFFF] w-[60px] h-[60px] p-4 rounded-xl" alt="">
-                <button class="heartBtn"><i class="fa-regular fa-heart"></i></button>
+                <button class="heartBtn"><i class="fa-regular fa-heart  hover:text-red-500 hover:scale-110 transition duration-200 cursor-pointer"></i></button>
             </div >
             <span class="font-bold">Women & Child Helpline</span>
             <p class="text-xs  text-gray-500">Women & Child Helpline</p>
             <p class="text-lg font-bold mt-2">109</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Help</span>
             <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center " data-number="109"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center" data-service="Women & Child Helpline" data-number="109"><i class="fa-solid fa-phone"></i> Call</button>
+                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="109"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Women & Child Helpline" data-number="109"><i class="fa-solid fa-phone"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center">
                  <img src="./assets/emergency.png" class="bg-[#DFEFFF] w-[60px] h-[60px] p-4 rounded-xl" alt="">
-                <button class="heartBtn"><i class="fa-regular fa-heart"></i></button>
+                <button class="heartBtn"><i class="fa-regular fa-heart  hover:text-red-500 hover:scale-110 transition duration-200 cursor-pointer"></i></button>
             </div >
             <span class="font-bold">Anti-Corruption Helpline</span>
             <p class="text-xs  text-gray-500">Anti-Corruption</p>
             <p class="text-lg font-bold mt-2">106</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Govt.</span>
             <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center " data-number="106"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center" data-service="Anti-Corruption Helpline" data-number="106"><i class="fa-solid fa-phone"></i> Call</button>
+                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="106"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Anti-Corruption Helpline" data-number="106"><i class="fa-solid fa-phone"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center">
                  <img src="./assets/emergency.png" class="bg-[#DFEFFF] w-[60px] h-[60px] p-4 rounded-xl" alt="">
-                <button class="heartBtn"><i class="fa-regular fa-heart"></i></button>
+                <button class="heartBtn"><i class="fa-regular fa-heart  hover:text-red-500 hover:scale-110 transition duration-200 cursor-pointer"></i></button>
             </div >
             <span class="font-bold">Electricity Helpline</span>
             <p class="text-xs  text-gray-500">Electricity Outage</p>
             <p class="text-lg font-bold mt-2">16216</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Electricity</span>
             <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center " data-number="16216"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center" data-service="Electricity Helpline" data-number="16216"><i class="fa-solid fa-phone"></i> Call</button>
+                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="16216"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Electricity Helpline" data-number="16216"><i class="fa-solid fa-phone"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center">
                  <img src="./assets/brac.png" class="bg-[#DFEFFF] w-[60px] h-[60px] p-4 rounded-xl" alt="">
-                <button class="heartBtn"><i class="fa-regular fa-heart"></i></button>
+                <button class="heartBtn"><i class="fa-regular fa-heart  hover:text-red-500 hover:scale-110 transition duration-200 cursor-pointer"></i></button>
             </div >
             <span class="font-bold">Brac Helpline</span>
             <p class="text-xs  text-gray-500">Brac</p>
             <p class="text-lg font-bold mt-2">16445</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">NGO</span>
             <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center " data-number="16445"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center" data-service="Brac Helpline" data-number="16445"><i class="fa-solid fa-phone"></i> Call</button>
+                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="16445"><i class="fa-solid fa-copy cpyy"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Brac Helpline" data-number="16445"><i class="fa-solid fa-phone"></i> Call</button>
             </div>
         </div>
         <div class="bg-white p-4 rounded shadow">
             <div class="flex justify-between items-center">
                  <img src="./assets/Bangladesh-Railway.png" class="bg-[#DFEFFF] w-[60px] h-[60px] p-4 rounded-xl" alt="">
-                <button class="heartBtn"><i class="fa-regular fa-heart"></i></button>
+                <button class="heartBtn"><i class="fa-regular fa-heart  hover:text-red-500 hover:scale-110 transition duration-200 cursor-pointer"></i></button>
             </div >
             <span class="font-bold">Bangladesh Railway Helpline </span>
             <p class="text-xs  text-gray-500">Bangladesh Railway</p>
             <p class="text-lg font-bold mt-2">163</p>
             <span class="inline-block bg-gray-100 text-gray-500 text-xs px-2 py-1 rounded-3xl">Travel</span>
             <div class="flex justify-between gap-2 mt-3">
-                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center " data-number="163"><i class="fa-solid fa-copy"></i> Copy</button>
-                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center" data-service="Bangladesh Railway Helpline" data-number="163"><i class="fa-solid fa-phone"></i> Call</button>
+                <button class="copyBtn flex-1 px-10 py-1 rounded-lg bg-white  text-gray-500 border-2 border-gray-200 flex items-center justify-center hover:bg-gray-100 hover:text-gray-800 hover:border-gray-300 transition" data-number="163"><i class="fa-solid fa-copy"></i> Copy</button>
+                <button class="callBtn flex-1 bg-green-500 text-white px-10 py-1 rounded-lg flex items-center justify-center  hover:bg-green-600 transition" data-service="Bangladesh Railway Helpline" data-number="163"><i class="fa-solid fa-phone"></i> Call</button>
             </div>
         </div>
         
@@ -202,7 +196,7 @@
         <aside class="bg-white p-4 rounded shadow" id="historySection">
             <div class="flex justify-between items-center mb-2">
                 <h2> <i class="fa-regular fa-clock"></i> <span  class="font-bold">Call History</span></h2>
-                <button id="clearHistory" class="bg-[#00A63E] min-w-[100px] h[50px] px-4 py-1 items-center  text-center text-white rounded-3xl">Clear</button>
+                <button id="clearHistory" class="bg-[#00A63E] min-w-[100px] h[50px] px-4 py-1 items-center  text-center text-white rounded-3xl  hover:bg-green-700 transition">Clear</button>
             </div>
             <ul id="historyList" class=" space-y-2 text-sm text-gray-700 rounded p-4"></ul>
         </aside>
