--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <!-- Right Counts -->
         <div class="flex flex-wrap sm:flex-nowrap gap-2 sm:gap-4 mt-2 sm:mt-0 w-full sm:w-auto justify-center">
             <span id="heartCount" class="bg-[#41ff6b1a] min-w-[90px] px-3 py-1 text-center rounded-3xl text-sm sm:text-base">
-              0 ❤️
+              0 <i class="fa-solid fa-heart text-red-500 ml-1"></i>
             </span>
             <span id="coinCount" class="bg-[#41ff6b1a] min-w-[90px] px-3 py-1 text-center rounded-3xl text-sm sm:text-base">
-              100 💰
+              100 <i class="fa-solid fa-coins text-yellow-500 ml-1"></i>
             </span>
             <span id="copyCount" class="bg-[#00A63E] min-w-[90px] px-3 py-1 text-center text-white rounded-3xl text-sm sm:text-base">
               0 Copy
